--- a/projetotw/index.html
+++ b/projetotw/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="princ.css">
-    <!--<object type="text/html" data="menu/menu.html"></object>-->
-    <title>Quadros</title>
+    <title>Museu de Arte</title>
+    <link rel="icon" type="image/x-icon" href="img/icon.png">
 </head>
 <body>
 
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li style="float:right"><a class="active" href="Admin/admin.html"><img  src="img/admin.png" width="26px"></a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="Escultura/escultura.html">Escultura</a></li>
+        <li><a href="Fotografia/fotografia.html">Fotografia</a></li>
+        <li><a href="Pintura/pintura.html">Pintura</a></li>
+        <li><a href="Artistas/artistas.html">Artistas</a></li>
     </ul>
+
+    <div>
+        <img id="logo" src="img/museum_white.png"  >
+    </div>
+
     
 </body>
 </html>
